<resources>
    <!--  splash_screen strings  -->
    <string name="app_name">Capstone</string>
    <string name="ek_img_content">ExportKit Image</string>
    <!--  login strings  -->
    <string name="buat">Buat</string>
    <string name="akun_baru">Akun Baru</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_email_string">Masukkan Email</string>
    <string name="kata_sandi_string">Kata Sandi</string>
    <string name="konfirmasi_sandi">Konfirmasi Kata Sandi</string>
    <string name="selamat">Selamat</string>
    <string name="datang_kembali">Datang Kembali</string>
    <string name="belumpunyaakun">Belum punya akun? Silahkan</string>
    <string name="registrasibutton">Registrasi</string>
    <string name="button_registrasi">Registrasi</string>
    <string name="login">Masuk</string>
    <string name="button_login">Login</string>
    <string name="back_button">back</string>
    <string name="timer_icon">timer</string>
    <string name="profile_picture">profile</string>
    <string name="camera_icon">camera</string>
    <string name="email_icon">email</string>
    <string name="title_home">Home</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_result">Result</string>
    <string name="title_historylist">Historylist</string>
    <string name="title_profile">Profile</string>
</resources>