<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.capstone.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_quiz"
            app:destination="@id/navigation_quiz" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_historylist"
            app:destination="@id/navigation_historylist" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.dicoding.capstone.fragment.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" >
        <action
            android:id="@+id/action_navigation_quiz_to_navigation_result"
            app:destination="@id/navigation_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.dicoding.capstone.fragment.ResultFragment"
        android:label="@string/title_result"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/navigation_historylist"
        android:name="com.dicoding.capstone.fragment.HistoryListFragment"
        android:label="@string/title_historylist"
        tools:layout="@layout/fragment_history_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.capstone.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>